Using a higher resolution for the Baymax background and the cover style to prevent Baymax from stretching

--- a/cool.css
+++ b/cool.css
@@ -112,7 +112,7 @@ html , body {
 
 .bottomSlideBox {
 	background-image: url("baymax.jpg");
-	background-size: 100% 100%;
+	background-size: cover;
 	background-repeat:no-repeat;
 	background-color: rgb(100, 200, 0);
 	border-top: 0;
